# molgen-bench

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml  pointcloud2d.yaml  pointcloud2d_quick.yaml  qm9.yaml  qm9_quick.yaml  test_quick.yaml  toy_molecular.yaml  toy_molecular_quick.yaml
configs/architectures/: dit.yaml  gnn.yaml  pairformer.yaml  transformer.yaml
configs/experiments/: base.yaml  experiment_list.yaml  large_adamw_fp16.yaml  large_adamw_fp32.yaml  large_muon_fp16.yaml  large_muon_fp32.yaml  medium_adamw_coord_fourier.yaml  medium_adamw_coord_linear.yaml  medium_adamw_cosine.yaml  medium_adamw_fp16.yaml  medium_adamw_fp32.yaml  medium_adamw_linear.yaml  medium_adamw_loss_huber.yaml  medium_adamw_loss_mse.yaml  medium_adamw_lr_default.yaml  medium_adamw_lr_high.yaml  medium_adamw_lr_low.yaml  medium_adamw_norm_layernorm.yaml  medium_adamw_norm_rmsnorm.yaml  medium_adamw_pos_learnable.yaml  medium_adamw_pos_none.yaml  medium_adamw_pos_sinusoidal.yaml  medium_adamw_sched_cosine.yaml  medium_adamw_sched_linear.yaml  medium_adamw_sched_quadratic.yaml  medium_adamw_sched_sigmoid.yaml  medium_muon_fp16.yaml  medium_muon_fp32.yaml  medium_muon_lr_default.yaml  medium_muon_lr_high.yaml  medium_muon_lr_low.yaml  small_adamw_fp16.yaml  small_adamw_fp32.yaml  (+2 more)
docs/: closing_tasks.md  repo_usage.md  research_context.md  start.txt
scripts/: run_benchmarks.sh  run_scaling.sh  run_tests.sh
src/: __init__.py
tests/: __init__.py  test_data.py  test_metrics.py  test_models.py
(+46 files in other folders)
